--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -64,3 +64,20 @@ grpc:
   userinfo_client:
     host: localhost
     port: 10061
+
+using:
+  spring:
+    schedulerFactory: true
+org:
+  quartz:
+    jobStore:
+        class: org.quartz.simpl.RAMJobStore
+        misfireThreshold: 60000
+    threadPool:
+        class: org.quartz.simpl.SimpleThreadPool
+        threadCount: 2
+        threadsInheritContextClassLoaderOfInitializingThread: true
+cron:
+  frequency:
+    #每天10：45分开始
+    jobwithcrontrigger: 0 45 10 ? * * *
