--- a/aaas-api-asset-allocation/src/main/resources/application-prod.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ mybatis:
 spring:
     datasource:
         driverClassName: com.mysql.jdbc.Driver
-        password: 1qaz@WSX
+        password: N4eTVr89lX9BaPcx
         url: jdbc:mysql://localhost:3306/choice?useUnicode=true&characterEncoding=utf-8
         username: sa
     jpa:
