--- a/aaas-api-asset-allocation/src/test/resources/application.properties
+++ b/aaas-api-asset-allocation/src/test/resources/application.properties
@@ -4,4 +4,4 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = sa
-spring.datasource.password = 1qaz@WSX
+spring.datasource.password = N4eTVr89lX9BaPcx
