--- a/aaas-api-data-manager/src/main/resources/application-prod.yml
+++ b/aaas-api-data-manager/src/main/resources/application-prod.yml
@@ -31,7 +31,7 @@ datasource:
   sampleapp:
     url: jdbc:mysql://localhost:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
     username: sa
-    password: 1qaz@WSX
+    password: N4eTVr89lX9BaPcx
     driverClassName: com.mysql.jdbc.Driver
     defaultSchema:
     maxPoolSize: 20
