--- a/aaas-api-user-login/src/main/resources/application-dev.yml
+++ b/aaas-api-user-login/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssflogin?useUnicode=true&characterEncoding=utf-8
     username: sa
-    password: 1qaz@WSX
+    password: N4eTVr89lX9BaPcx
     driverClassName: com.mysql.jdbc.Driver
     defaultSchema:
     maxPoolSize: 20
