--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
@@ -36,7 +36,7 @@ datasource:
   sampleapp:
     url: jdbc:mysql://localhost:3306/ssftrdpay?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
     username: sa
-    password: 1qaz@WSX
+    password: N4eTVr89lX9BaPcx
     driverClassName: com.mysql.jdbc.Driver
     defaultSchema: ssftrdpay
     maxPoolSize: 20
