update for config parameters

--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
@@ -73,3 +73,8 @@ cron:
   frequency:
   #每天17：30分开始
     jobwithcrontrigger: 0 45 17 ? * * *
+
+#--- multithread
+multithread:
+  pool:
+    size: 8
