--- a/aaas-api-common/pom.xml
+++ b/aaas-api-common/pom.xml
@@ -33,7 +33,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 </project>
