--- a/aaas-mid-api/pom.xml
+++ b/aaas-mid-api/pom.xml
@@ -24,6 +24,7 @@
         <h2.version>1.4.187</h2.version>
         <maven-surefire-plugin.version>2.11</maven-surefire-plugin.version>
         <maven-surefire-report-plugin.version>2.11</maven-surefire-report-plugin.version>
+        <maven-site-plugin.version>3.7</maven-site-plugin.version>
         <jxr-maven-plugin.version>2.3</jxr-maven-plugin.version>
         <junit.version>4.12</junit.version>
         <lombok.version>1.16.10</lombok.version>
@@ -225,11 +226,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>${maven-surefire-report-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jxr-maven-plugin</artifactId>
-                <version>${jxr-maven-plugin.version}</version>
+                <configuration>
+                    <outputDirectory>../surefire-report</outputDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </reporting>
