--- a/aaas-api-asset-allocation/src/main/resources/application-test.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-test.yml
@@ -6,9 +6,9 @@ mybatis:
 spring:
     datasource:
         driverClassName: com.mysql.jdbc.Driver
-        password: N4eTVr89lX9BaPcx
+        password: t5MqqozQDNramNHh
         url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8
-        username: sa
+        username: ssf08
     jpa:
       hibernate:
         ddl-auto: update
