--- a/aaas-funds-datacollection-server/src/main/resources/application-it.yml
+++ b/aaas-funds-datacollection-server/src/main/resources/application-it.yml
@@ -1,5 +1,16 @@
 server:
   port: 10090
+logging:
+  level:
+      org.springframework.data: debug
+      org.springframework.data.mongodb.core.MongoTemplate: DEBUG
+spring:
+    data:
+        mongodb:
+            database: funds
+            host: 192.168.1.249
+            port: 27017
+
 grpc:
   host: localhost
   port: 10091
