--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -6,9 +6,12 @@ mybatis:
 spring:
     datasource:
         driverClassName: com.mysql.jdbc.Driver
-        password: t5MqqozQDNramNHh
-        url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8
-        username: ssf08
+#        password: t5MqqozQDNramNHh
+#        url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8
+#        username: ssf08
+        password: uCIPzdEJzbeoFAMj
+        url: jdbc:mysql://192.168.1.10:3306/choicecopy?useUnicode=true&characterEncoding=utf-8
+        username: ssf09
     jpa:
       hibernate:
         ddl-auto: update
