--- a/aaas-app-datacollection-client/pom.xml
+++ b/aaas-app-datacollection-client/pom.xml
@@ -10,9 +10,9 @@
 	<name>aaas-app-datacollection-client</name>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.8.RELEASE</version>
+		<groupId>com.shellshellfish</groupId>
+		<artifactId>aaas</artifactId>
+		<version>1.0-SNAPSHOT</version>
 		 <!-- lookup parent from repository -->
 	</parent>
 
