--- a/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
@@ -10,9 +10,9 @@
 	<name>aaas-finance-trade-pay</name>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.8.RELEASE</version>
+		<groupId>com.shellshellfish</groupId>
+		<artifactId>aaas-finance-trade</artifactId>
+		<version>1.0-SNAPSHOT</version>
 		 <!-- lookup parent from repository -->
 	</parent>
 
@@ -21,7 +21,7 @@
 		<java.version>1.8</java.version>
 		<grpc.version>1.8.0</grpc.version><!-- CURRENT_GRPC_VERSION -->
 		<h2.version>1.4.187</h2.version>
-		<quartz.version>2.2.3</quartz.version>
+		<quartz.version>2.3.0</quartz.version>
 		
 	</properties>
 
@@ -160,10 +160,7 @@
 		</dependency>
 
 
-      <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
