--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -17,6 +17,8 @@
 	</parent>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<h2.version>1.4.187</h2.version>
 		<lombok.version>1.16.10</lombok.version>
