--- a/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
@@ -200,8 +200,15 @@
 							<outputDirectory>src/main/proto</outputDirectory>
 							<resources>
 								<resource>
-									<directory>../../proto/userinfo/</directory>
 									<directory>../../proto/pay/</directory>
+									<filtering>true</filtering>
+								</resource>
+								<resource>
+									<directory>../../proto/userinfo/</directory>
+									<filtering>true</filtering>
+								</resource>
+								<resource>
+									<directory>../../proto/finance/</directory>
 									<filtering>true</filtering>
 								</resource>
 							</resources>
