update log system

--- a/aaas-app-datacollection-client/src/main/resources/logback.properties
+++ b/aaas-app-datacollection-client/src/main/resources/logback.properties
@@ -5,7 +5,7 @@ context.name=aaas-app-datacollection-client
 
 log.dir=./logs/aaas-app-datacollection-client
 
-rolling.policy.file.name.pattern=yyyy-MM-dd HH
+rolling.policy.file.name.pattern=yyyy-MM-dd
 max.file.size=100MB
 max.history=50
 
