--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/logback.properties
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/logback.properties
@@ -5,7 +5,7 @@ context.name=aaas-finance-trade-pay
 
 log.dir=./logs/aaas-finance-trade-pay
 
-rolling.policy.file.name.pattern=yyyy-MM-dd HH
+rolling.policy.file.name.pattern=yyyy-MM-dd
 max.file.size=100MB
 max.history=50
 
