--- a/aaas-api-finance/src/main/resources/logback.properties
+++ b/aaas-api-finance/src/main/resources/logback.properties
@@ -5,7 +5,7 @@ context.name=aaas-api-finance
 
 log.dir=./logs/aaas-api-finance
 
-rolling.policy.file.name.pattern=yyyy-MM-dd HH
+rolling.policy.file.name.pattern=yyyy-MM-dd
 max.file.size=100MB
 max.history=50
 
