--- a/aaas-funds-datacollection-server/src/main/resources/logback.properties
+++ b/aaas-funds-datacollection-server/src/main/resources/logback.properties
@@ -5,7 +5,7 @@ context.name=aaas-funds-datacollection-server
 
 log.dir=./logs/aaas-funds-datacollection-server
 
-rolling.policy.file.name.pattern=yyyy-MM-dd HH
+rolling.policy.file.name.pattern=yyyy-MM-dd
 max.file.size=100MB
 max.history=50
 
