--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
@@ -52,11 +52,14 @@ datasource:
       dialect: org.hibernate.dialect.MySQLDialect
 
 grpc:
-  finance_prod_client:
-    host: localhost
-    port: 10021
   host: localhost
   port: 10111
+  finance_prod_client:
+    host: localhost
+    port: 10031
+  userinfo_client:
+    host: localhost
+    port: 10061
 using:
   spring:
     schedulerFactory: true
