--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-prod.yml
@@ -16,12 +16,11 @@ spring:
     host: localhost
     port: 5672
     virtual-host: aaas
-    topicQueuePayName: com.ssf.topic.queue.pay
-    topicQueueOrderName: com.ssf.topic.queue.order
-    topicExchangeName: com.ssf.topic.exchange
+    topicQueuePayName: com-ssf-topic-queue-pay
+    topicQueueOrderName: com-ssf-topic-queue-order
+    topicExchangeName: com-ssf-topic-exchange
     topicPay: shellshellfish.pay
     topicOrder: shellshellfish.order
-
   data:
     mongodb:
       host: localhost
