--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -9,9 +9,14 @@ spring:
 #        password: t5MqqozQDNramNHh
 #        url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8
 #        username: ssf08
-        password: uCIPzdEJzbeoFAMj
-        url: jdbc:mysql://192.168.1.10:3306/choicecopy?useUnicode=true&characterEncoding=utf-8
-        username: ssf09
+
+#        password: uCIPzdEJzbeoFAMj
+#        url: jdbc:mysql://192.168.1.10:3306/choicecopy?useUnicode=true&characterEncoding=utf-8
+#        username: ssf09
+
+        password: 1xtZgrp#XzxGi$3OZ
+        url: jdbc:mysql://192.168.1.15:3306/choicedebug?useUnicode=true&characterEncoding=utf-8
+        username: ssf0015
     jpa:
       hibernate:
         ddl-auto: update
