update outside order no for fund buy

--- a/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
@@ -204,6 +204,10 @@
 									<filtering>true</filtering>
 								</resource>
 								<resource>
+									<directory>../../proto/order/</directory>
+									<filtering>true</filtering>
+								</resource>
+								<resource>
 									<directory>../../proto/userinfo/</directory>
 									<filtering>true</filtering>
 								</resource>
