--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
@@ -60,6 +60,9 @@ grpc:
   userinfo_client:
     host: localhost
     port: 10061
+  order_client:
+    host: localhost
+    port: 10101
 using:
   spring:
     schedulerFactory: true
