--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
@@ -65,6 +65,9 @@ grpc:
   userinfo_client:
     host: localhost
     port: 10061
+  order_client:
+    host: localhost
+    port: 10101
 using:
   spring:
     schedulerFactory: true
