--- a/aaas-api-user-info/src/main/resources/application-test.yml
+++ b/aaas-api-user-info/src/main/resources/application-test.yml
@@ -74,5 +74,7 @@ grpc:
 
 aaas-api-finance-url: http://localhost:10120
 
+api-asset-alloction-url: http://localhost:10020
+
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
