use zz to get netunit value

--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
@@ -27,9 +27,10 @@ spring:
     topicUserinfo: shellshellfish.userinfo
   data:
     mongodb:
-      host: localhost
+      host: 192.168.1.10
       port: 27017
       database: zhongzheng
+      paydatabase: ssftrdpay
 
 
 datasource:
