--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
@@ -35,7 +35,7 @@ spring:
       host: 192.168.1.10
       port: 27017
       database: zhongzheng
-
+      paydatabase: ssftrdpay
 
 datasource:
   sampleapp:
