--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-it.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-it.yml
@@ -31,9 +31,10 @@ spring:
     topicOrder: shellshellfish.order
   data:
     mongodb:
-      host: 192.168.1.249
+      host: 192.168.1.10
       port: 27017
       database: zhongzheng
+      paydatabase: ssftrdpay
 
 
 datasource:
