--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
@@ -27,7 +27,7 @@ spring:
     topicUserinfo: shellshellfish.userinfo
   data:
     mongodb:
-      host: 192.168.1.10
+      host: localhost
       port: 27017
       database: zhongzheng
       paydatabase: ssftrdpay
