add redis and make redeem confirm information into mongo

--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
@@ -31,7 +31,10 @@ spring:
       port: 27017
       database: zhongzheng
       paydatabase: ssftrdpay
-
+  redis:
+    host: localhost
+    port: 6379
+    password: redis123
 
 datasource:
   sampleapp:
