--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
@@ -35,7 +35,10 @@ spring:
       port: 27017
       database: zhongzheng
       paydatabase: ssftrdpay
-
+  redis:
+    host: 192.168.1.10
+    port: 6379
+    password: redis123
 
 datasource:
   sampleapp:
