--- a/aaas-api-user-info/src/main/resources/application-dev.yml
+++ b/aaas-api-user-info/src/main/resources/application-dev.yml
@@ -37,7 +37,16 @@ spring:
      topicPay: shellshellfish.pay
      topicOrder: shellshellfish.order
      topicUserinfo: shellshellfish.userinfo
-
+  redis:
+    host: 192.168.1.10
+    port: 6379
+    password: redis123
+    timeout: 0
+    pool:
+      max-active: 8
+      max-wait: -1
+      max-idle: 8
+      min-idle: 0
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
