--- a/aaas-api-user-info/src/main/resources/application-it.yml
+++ b/aaas-api-user-info/src/main/resources/application-it.yml
@@ -34,6 +34,10 @@ spring:
     topicPay: shellshellfish.pay
     topicOrder: shellshellfish.order
     topicUserinfo: shellshellfish.userinfo
+  redis:
+    host: 192.168.1.10
+    port: 6379
+    password: redis123
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.249:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
