adjust prod buy and sell quantity update logic

--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -256,6 +256,10 @@
 									<directory>../proto/pay/</directory>
 									<filtering>true</filtering>
 								</resource>
+								<resource>
+								<directory>../proto/common/</directory>
+								<filtering>true</filtering>
+							</resource>
 							</resources>
 						</configuration>
 					</execution>
