--- a/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
@@ -218,6 +218,10 @@
 									<directory>../../proto/finance/</directory>
 									<filtering>true</filtering>
 								</resource>
+								<resource>
+									<directory>../../proto/common/</directory>
+									<filtering>true</filtering>
+								</resource>
 							</resources>
 						</configuration>
 					</execution>
