--- a/aaas-api-gateway/src/main/resources/application-k8s.yml
+++ b/aaas-api-gateway/src/main/resources/application-k8s.yml
@@ -2,31 +2,31 @@ zuul:
   routes:
     api-mid:
       path: /phoneapi-ssf/**
-      url: http://localhost:10130/phoneapi-ssf
-    apii-mid:
-      path: /phoneapii-ssf/**
-      url: http://localhost:10140/phoneapii-ssf
+      url: http://aaas-mid-api:10130/phoneapi-ssf
+#    apii-mid:
+#      path: /phoneapii-ssf/**
+#      url: http://localhost:10140/phoneapii-ssf
     userinfo:
       path: /api/f/SHT/temp-11-15/aaas/aaas-api-gateway/userinfo/**
-      url: http://localhost:10060/api/userinfo/
+      url: http://aaas-api-user-info:10060/api/userinfo/
     userlogin:
       path: /api/useraccount/**
-      url: http://localhost:10070/api/useraccount/
+      url: http://aaas-api-user-login:10070/api/useraccount/
     userinfo-swagger:
       path: /api/userinfo/swagger-ui.html
-      url: http://localhost:10060/swagger-ui.html#
+      url: http://aaas-api-user-info:10060/swagger-ui.html#
     riskassessments:
       path: /api/riskassessments/**
-      url: http://localhost:10050/api/riskassessments/
+      url: http://aaas-api-risk-assessment:10050/api/riskassessments/
     userlogin-swagger:
       path: /api/useraccount/swagger-ui.html/**
-      url: http://localhost:10070/swagger-ui.html
+      url: http://aaas-api-user-login:10070/swagger-ui.html
     riskassessments-swagger:
       path: /api/riskassessments/swagger-ui.html/**
-      url: http://localhost:10050/swagger-ui.html/
+      url: http://aaas-api-risk-assessment:10050/swagger-ui.html/
     datamanager:
       path: /api/datamanager/**
-      url: http://localhost:10030//api/datamanager
+      url: http://aaas-api-data_manager:10030//api/datamanager
 #    accounts:
 #      path: /v1/accounts/**
 #      url: http://localhost:8080/api/accounts
@@ -36,7 +36,7 @@ zuul:
     auth:
       path: /v1/auth/**
       sensitiveHeaders: Cookie,Set-Cookie
-      url: http://localhost:10070/auth
+      url: http://aaas-api-user-login:10070/auth
 
 ribbon:
   eureka:
@@ -45,12 +45,12 @@ ribbon:
 server:
   port: 10040
 grpc:
-  host: localhost
+#  host: localhost
   port: 10041
 security:
   oauth2:
     resource:
-      userInfoUri: http://localhost:10070/auth/user
+      userInfoUri: http://aaas-api-user-login:10070/auth/user
 
 shellshellfish:
   ignoredWhitelist:
