--- a/aaas-api-user-info/src/main/resources/application-k8s.yml
+++ b/aaas-api-user-info/src/main/resources/application-k8s.yml
@@ -63,22 +63,22 @@ grpc:
 #    host: localhost
     port: 10061
   data-manager-rpc:
-    host: localhost
+    host: aaas-api-data_manager
     port: 10031
   finance-trade-order-rpc:
-    host: localhost
+    host: aaas-finance-trade-order
     port: 10101
   finance-trade-pay-rpc:
-    host: localhost
+    host: aaas-finance-trade-pay
     port: 10111
   datacollection-server-rpc:
-    host: localhost
+    host: aaas-app-datacollection-server
     port: 10091
 
 
-aaas-api-finance-url: http://localhost:10120
+aaas-api-finance-url: http://aaas-api-finance:10120
 
-api-asset-alloction-url: http://localhost:10020
+api-asset-alloction-url: http://aaas-api-asset-allocation:10020
 
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
