update for pom.xml config

--- a/aaas-api-finance/pom.xml
+++ b/aaas-api-finance/pom.xml
@@ -123,7 +123,7 @@
 					<execution>
 						<id>fmp</id>
 						<goals>
-							<goal>deploy</goal>
+							<goal>resource</goal>
 						</goals>
 					</execution>
 				</executions>
