--- a/aaas-api-asset-allocation/pom.xml
+++ b/aaas-api-asset-allocation/pom.xml
@@ -283,7 +283,7 @@
                     <execution>
                         <id>fmp</id>
                         <goals>
-                            <goal>deploy</goal>
+                            <goal>resource</goal>
                         </goals>
                     </execution>
                 </executions>
