--- a/aaas-api-gateway/pom.xml
+++ b/aaas-api-gateway/pom.xml
@@ -120,7 +120,7 @@
 					<execution>
 						<id>fmp</id>
 						<goals>
-							<goal>deploy</goal>
+							<goal>resource</goal>
 						</goals>
 					</execution>
 				</executions>
