--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -362,7 +362,7 @@
 					<execution>
 						<id>fmp</id>
 						<goals>
-							<goal>deploy</goal>
+							<goal>resource</goal>
 						</goals>
 					</execution>
 				</executions>
