--- a/aaas-api-user-login/pom.xml
+++ b/aaas-api-user-login/pom.xml
@@ -238,7 +238,7 @@
 					<execution>
 						<id>fmp</id>
 						<goals>
-							<goal>deploy</goal>
+							<goal>resource</goal>
 						</goals>
 					</execution>
 				</executions>
