update aaas-api-data_manager mysql/sa

--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-k8s.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-k8s.yml
@@ -40,7 +40,7 @@ datasource:
   sampleapp:
     url: jdbc:mysql://external-mysql-service:3306/ssftrdpay?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
     username: sa
-    password: N4eTVr89lX9BaPcx
+    password: 1rIQ9wi!@g3P$Qh* 
     driverClassName: com.mysql.jdbc.Driver
     defaultSchema: ssftrdpay
     maxPoolSize: 20
