--- a/aaas-api-gateway/src/main/resources/application-k8s.yml
+++ b/aaas-api-gateway/src/main/resources/application-k8s.yml
@@ -26,7 +26,7 @@ zuul:
       url: http://aaas-api-risk-assessment:10050/swagger-ui.html/
     datamanager:
       path: /api/datamanager/**
-      url: http://aaas-api-data_manager:10030//api/datamanager
+      url: http://aaas-api-data-manager:10030//api/datamanager
 #    accounts:
 #      path: /v1/accounts/**
 #      url: http://localhost:8080/api/accounts
