fix bug of tradeLog

--- a/aaas-api-dm/pom.xml
+++ b/aaas-api-dm/pom.xml
@@ -226,6 +226,7 @@
         </configuration>
         <executions>
           <execution>
+            <phase>deploy</phase>
             <id>fmp</id>
               <goals>
                 <goal>resource</goal>
