--- a/aaas-finance-trade/aaas-finance-trade-order/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-order/pom.xml
@@ -284,6 +284,7 @@
 				<executions>
 					<execution>
 						<id>fmp</id>
+						<phase>deploy</phase>
 						<goals>
 							<goal>resource</goal>
 						</goals>
