--- a/aaas-mid-api/pom.xml
+++ b/aaas-mid-api/pom.xml
@@ -248,6 +248,7 @@
                 <executions>
                     <execution>
                         <id>fmp</id>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>resource</goal>
                         </goals>
