--- a/aaas-api-user-login/pom.xml
+++ b/aaas-api-user-login/pom.xml
@@ -237,6 +237,7 @@
 				<executions>
 					<execution>
 						<id>fmp</id>
+						<phase>deploy</phase>
 						<goals>
 							<goal>resource</goal>
 						</goals>
