product mix optimization 20180228

--- a/aaas-api-dm/src/main/resources/application-k8s.yml
+++ b/aaas-api-dm/src/main/resources/application-k8s.yml
@@ -41,4 +41,5 @@ datasource:
       show_sql: true
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
-
+shellshellfish:
+  asset-alloction-url: "http://localhost:10020"
