fix bug ID:1000112

--- a/aaas-api-dm/src/main/resources/application-prod.yml
+++ b/aaas-api-dm/src/main/resources/application-prod.yml
@@ -42,3 +42,4 @@ datasource:
       dialect: org.hibernate.dialect.MySQLDialect
 shellshellfish:
   asset-alloction-url: "http://localhost:10020"
+  userinfo-url: "http://localhost:10060"
