update pom for compile

--- a/aaas-api-dm/pom.xml
+++ b/aaas-api-dm/pom.xml
@@ -249,7 +249,7 @@
             <phase>deploy</phase>
             <id>fmp</id>
               <goals>
-                <goal>resource</goal>
+                <goal>deploy</goal>
               </goals>
           </execution>
         </executions>
