--- a/aaas-app-tools/aaas-app-checkfunds/pom.xml
+++ b/aaas-app-tools/aaas-app-checkfunds/pom.xml
@@ -343,7 +343,7 @@
             <phase>deploy</phase>
             <id>fmp</id>
               <goals>
-                <goal>resource</goal>
+                <goal>deploy</goal>
               </goals>
           </execution>
         </executions>
