--- a/aaas-mid-api/pom.xml
+++ b/aaas-mid-api/pom.xml
@@ -250,7 +250,7 @@
                         <id>fmp</id>
                         <phase>deploy</phase>
                         <goals>
-                            <goal>resource</goal>
+                            <goal>deploy</goal>
                         </goals>
                     </execution>
                 </executions>
