--- a/aaas-api-user-login/pom.xml
+++ b/aaas-api-user-login/pom.xml
@@ -239,7 +239,7 @@
 						<id>fmp</id>
 						<phase>deploy</phase>
 						<goals>
-							<goal>resource</goal>
+							<goal>deploy</goal>
 						</goals>
 					</execution>
 				</executions>
