--- a/aaas-finance-caculate/pom.xml
+++ b/aaas-finance-caculate/pom.xml
@@ -189,7 +189,7 @@
 					<execution>
 						<id>fmp</id>
 						<goals>
-							<goal>resource</goal>
+							<goal>deploy</goal>
 						</goals>
 					</execution>
 				</executions>
