--- a/aaas-finance-trade/aaas-finance-trade-order/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-order/pom.xml
@@ -286,7 +286,7 @@
 						<id>fmp</id>
 						<phase>deploy</phase>
 						<goals>
-							<goal>resource</goal>
+							<goal>deploy</goal>
 						</goals>
 					</execution>
 				</executions>
