--- a/aaas-funds-datacollection-server/pom.xml
+++ b/aaas-funds-datacollection-server/pom.xml
@@ -243,7 +243,7 @@
                         <id>fmp</id>
                         <phase>deploy</phase>
                         <goals>
-                            <goal>resource</goal>
+                            <goal>deploy</goal>
                         </goals>
                     </execution>
                 </executions>
