--- a/aaas-api-finance/src/main/resources/application-it.yml
+++ b/aaas-api-finance/src/main/resources/application-it.yml
@@ -45,3 +45,6 @@ cors:
     max-age: 1800
 
 api-data-manager-url: http://localhost:10030
+
+shellshellfish:
+  asset-allocation-url: "http://localhost:10020"
