--- a/aaas-api-finance/src/main/resources/application-prod.yml
+++ b/aaas-api-finance/src/main/resources/application-prod.yml
@@ -58,3 +58,6 @@ application:
         licenseUrl:
 
 api-data-manager-url: http://localhost:10030
+
+shellshellfish:
+  asset-allocation-url: "http://localhost:10020"
