--- a/aaas-api-finance/src/main/resources/application-test.yml
+++ b/aaas-api-finance/src/main/resources/application-test.yml
@@ -66,3 +66,6 @@ cors:
     max-age: 1800
 
 api-data-manager-url: http://localhost:10030
+
+shellshellfish:
+  asset-allocation-url: "http://localhost:10020"
