--- a/aaas-api-asset-allocation/src/main/resources/application-test.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-test.yml
@@ -1,23 +1,27 @@
 server:
   port: 10020
+
 mybatis:
     config-locations: classpath:mybatis/mybatis-config.xml
     mapper-locations: classpath:mybatis/mapper/*.xml
 spring:
-    datasource:
-        driverClassName: com.mysql.jdbc.Driver
-        password: 1rIQ9wi!@g3P$Qh*
-        url: jdbc:mysql://192.168.1.10:30006/choice?useUnicode=true&characterEncoding=utf-8
-        username: ssf08
-    jpa:
-      hibernate:
-        ddl-auto: update
-    data:
-        mongodb:
-        database: funds
-        host: 192.168.1.10
-        port: 30005
-        collection: portfolio_yield_all
+  datasource:
+      driverClassName: com.mysql.jdbc.Driver
+      password: 1rIQ9wi!@g3P$Qh*
+      url: jdbc:mysql://192.168.1.10:30006/choice?useUnicode=true&characterEncoding=utf-8
+      username: ssf08
+#        password: 1rIQ9wi!@g3P$Qh*
+#        url: jdbc:mysql://192.168.1.10:30006/choicecopy?useUnicode=true&characterEncoding=utf-8
+#        username: ssf09
+  jpa:
+    hibernate:
+      ddl-auto: update
+  data:
+    mongodb:
+      database: funds
+      host: 192.168.1.10
+      port: 30005
+      collection: portfolio_yield_all
 grpc:
   host: localhost
   port: 10021
