fix logger issue

--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
@@ -3,7 +3,12 @@ server:
   port: 10150
 ---
 spring:
-  profiles: dev
+  security:
+    basic:
+      enabled: false
+  management:
+    security:
+      enabled: false
   data:
       mongodb:
         database: funds
