--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
@@ -59,7 +59,10 @@ cron:
   frequency:
     #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
     # 	Every 10 minutes
-    jobCheckFunds: 0 0/2 0 ? * * *
+    jobCheckFunds: 0 0/30 * 1/1 * ? *
+using:
+  spring:
+    schedulerFactory: true
 grpc:
   pythonServer:
     ip: localhost
