--- a/aaas-api-asset-allocation/src/main/resources/application-prod.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-prod.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
       driverClassName: com.mysql.jdbc.Driver
       password: 1rIQ9wi!@g3P$Qh*
-      url: jdbc:mysql://localhost:3306/choice?useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://localhost:3306/choice?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
       username: ssf08
 #        password: uCIPzdEJzbeoFAMj
 #        url: jdbc:mysql://172.16.128.72:3306/choicecopy?useUnicode=true&characterEncoding=utf-8
