--- a/aaas-api-asset-allocation/src/main/resources/application-it.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-it.yml
@@ -12,6 +12,12 @@ spring:
     jpa:
       hibernate:
         ddl-auto: update
+    data:
+        mongodb:
+          database: funds
+          host: 192.168.1.249
+          port: 27017
+          collection: portfolio_yield_all
 grpc:
   host: localhost
   port: 10021
