assetallocation test-yml update

--- a/aaas-api-asset-allocation/src/main/resources/application-test.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-test.yml
@@ -5,13 +5,13 @@ mybatis:
     config-locations: classpath:mybatis/mybatis-config.xml
     mapper-locations: classpath:mybatis/mapper/*.xml
 spring:
-  datasource:
-      driverClassName: com.mysql.jdbc.Driver
-      password: 1rIQ9wi!@g3P$Qh*
-      url: jdbc:mysql://192.168.1.249:30006/choice?useUnicode=true&characterEncoding=utf-8
-      username: ssf08
-#        password: 1rIQ9wi!@g3P$Qh*
-#        url: jdbc:mysql://192.168.1.249:30006/choicecopy?useUnicode=true&characterEncoding=utf-8
+#  datasource:
+#      driverClassName: com.mysql.jdbc.Driver
+#      password: 1rIQ9wi!@g3P$Qh*
+#      url: jdbc:mysql://localhost:3306/choice?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+#      username: ssf08
+#        password: uCIPzdEJzbeoFAMj
+#        url: jdbc:mysql://172.16.128.72:3306/choicecopy?useUnicode=true&characterEncoding=utf-8
 #        username: ssf09
   jpa:
     hibernate:
@@ -22,6 +22,26 @@ spring:
       host: 192.168.1.249
       port: 30005
       collection: portfolio_yield_all
+
+datasource:
+  sampleapp:
+    url: jdbc:mysql://192.168.1.249:30006/choice?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    username: ssf08
+    password: 1rIQ9wi!@g3P$Qh*
+    driverClassName: com.mysql.jdbc.Driver
+    defaultSchema: ssfuser
+    maxPoolSize: 20
+    hibernate:
+      connection:
+        useUnicode: true
+        characterEncoding: UTF-8
+      jdbc:
+        batch_size: 50
+      hbm2ddl.method: update
+      show_sql: true
+      format_sql: true
+      dialect: org.hibernate.dialect.MySQLDialect
+
 grpc:
   host: localhost
   port: 10021
